Specify overflow property to avoid vertical and horizontal overflow in CardLayout (#117)
* Specify overflow property to avoid vertical and horizontal overflow

* Add bottom padding to formlayout to correctly enable scrolling once the min-content is surpassed

--- a/vaadinfrontend/frontend/styles/components/card-layout.css
+++ b/vaadinfrontend/frontend/styles/components/card-layout.css
@@ -1,4 +1,5 @@
 .min-size-to-content{
   min-width: fit-content;
   min-height: fit-content;
+  overflow: auto;
 }
